# chatbot-server

./: .gitignore  MANIFEST.in  README.md  USAGE.md  pyproject.toml  requirements.txt  run_server.sh  server.py  word.txt
src/mcp_server/: __init__.py  engine.py  server.py  spec.json  words.txt
tests/: test_server.py
tools/: build_spanish_words.py
