[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-wordle-coach"
version = "0.1.0"
description = "MCP server: Wordle Coach (entropy-based suggestions for 5-letter Wordle)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sebas" }]
dependencies = []

[project.scripts]
# el ejecutable "mcp-wordle-coach" llamará a mcp_server.server:main
mcp-wordle-coach = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]