[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-wordle-coach"
version = "0.1.1"  # ← súbelo para forzar rebuild en uvx
description = "MCP server: Wordle Coach (entropy-based suggestions for 5-letter Wordle)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sebas" }]
dependencies = []

[project.scripts]
mcp-wordle-coach = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_server = ["words.txt", "spec.json"]